# cafe-com-dados

./: .Rhistory  .pre-commit-config.yaml  .pre-commit-hooks.yaml  01-Estudo-Caso.R  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py  start.py
.github/workflows/: build.yml  ci.yml
Python/: requirements.txt  start.py
Python/analise/: analise-dados.ipynb
Python/checkpoint/: .index
Python/checkpoint/convnet/: .data-00000-of-00001
Python/checkpoint/custom_layers/: .index
Python/saved_model/convnet/: saved_model.pb
Python/src/: __ini__.py  main.py
Python_Base/: .gitignore  .python-version  requirements.txt  start.py
Python_Base/.github/workflows/: build.yml
Python_Base/analise/: analise-dados-skype.ipynb  analise-dados.ipynb  analise-pca.ipynb  analise.ipynb
Python_Base/src/: main.py
Python_TensorFlow/: .python-version  requirements.txt
Python_TensorFlow/analise/: analise-dados.ipynb
Python_TensorFlow/checkpoint/: .data-00000-of-00001
Python_TensorFlow/checkpoint/convnet/: .index
Python_TensorFlow/checkpoint/custom_layers/: .data-00000-of-00001
Python_TensorFlow/checkpoint/neural_network/: .index
Python_TensorFlow/saved_model/custom_layers/: saved_model.pb
Python_TensorFlow/saved_model/neural_network/: saved_model.pb
Python_TensorFlow/src/: main.py
Python_TensorFlow/src/tensorflow/: callbacks.py  convnet.py  customlayers.py  neuralnetwork.py  regularization.py
R/: .RData  .Rhistory  01-Estudo-Caso.R  02-Estudo-Caso.R
dados/: db-cartao-credito.csv
src/: __init__.py  main.py
(+6 files in other folders)
