[tool.poetry]
name = "cafe-com-dados"
version = "0.9.0"
description = "A naive serverless data health checker"
authors = ["Emerson Antonio <maxstyll@github.com>"]

[tool.semantic_release]
version_variable = [
    "setup.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true

[tool.poetry.dependencies]
python = "^3.8, <3.9"
pandas = "^1.1.0"
toml = "^0.10.1"
awswrangler = "^1.8.1"
dateparser = "^0.7.6"
nanoid = "^2.0.0"
python-slugify = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"