[tool.poetry]
name = "cafe-com-dados"
version = "0.10.0"
description = "A naive serverless data health checker"
authors = ["Emerson Antonio <maxstyll@github.com>"]

[tool.semantic_release]
version_variable = [
    "src/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
